# rocm-rs

./: .gitignore  Cargo.toml  NOTICE  README.md  UPSTREAM_PR_NOTES.md  build.rs
src/: error.rs  lib.rs
src/hip/: bindings.rs  device.rs  ffi.rs  kernel.rs  memory.rs  mod.rs  module.rs  stream.rs
src/hip/examples/: vector_add_kernel.rs
src/hip/examples/rust_kernel/: Cargo.toml
src/hip/examples/rust_kernel_async/: Cargo.toml
src/hip/examples/saxpy/: Cargo.toml
src/hip/examples/sort/: Cargo.toml
src/hip/examples/vector_add/: Cargo.toml  README.md  build.sh  kernel.hip  main.rs  vector_add.hsaco
src/hip/memory_ext/: mod.rs  sorting.rs
src/miopen/: activation.rs  batchnorm.rs  bindings.rs  convolution.rs  dropout.rs  error.rs  ffi.rs  fusion.rs  handle.rs  lrn.rs  mod.rs  pooling.rs  softmax.rs  tensor.rs
src/miopen/examples/basic/: Cargo.toml
src/miopen/examples/multi_tensor/: Cargo.toml
src/rocarray/: kernels.hip  kernels.rs  mod.rs  sorting.rs  sorting_kernels.hip
src/rocblas/: bindings.rs  error.rs  ffi.rs  handle.rs  level1.rs  level2.rs  macros.rs  memory.rs  mod.rs  types.rs
src/rocblas/examples/basic/: Cargo.toml
src/rocfft/: bindings.rs  examples.rs  mod.rs  utils.rs
src/rocprofiler/: bindings.rs  context.rs
src/rocrand/: bindings.rs  distribution.rs  error.rs  generator.rs  utils.rs
src/rocsolver/: bindings.rs  error.rs  ffi.rs  handle.rs  lacgv.rs  larf.rs  larfb.rs  larfg.rs  larft.rs  laswp.rs  lauum.rs  mod.rs  org2r.rs  types.rs  utils.rs
src/rocsparse/: bindings.rs  mod.rs  pruning.rs
(+4 files in other folders)
