[package]
name = "rocm-rs"
version = "0.1.0"
edition = "2024"
description = "Rust bindings for AMD ROCm libraries"
license = "MIT"
repository = "https://github.com/radudiaconu0/rocm-rs"
documentation = "https://docs.rs/rocm-rs"
readme = "README.md"
keywords = ["gpu", "rocm", "amd", "hpc", "bindings"]
categories = ["api-bindings", "external-ffi-bindings"]

[dependencies]
# Your dependencies here

[build-dependencies]
bindgen = "0.71.1"